feat: OpenSearch 2.11 compatibility and LLM provider improvements
Основные изменения:

1. OpenSearch 2.11 Support:
   - Заменен Elasticsearch на OpenSearch в es_conn.py
   - Обновлен mapping.json для k-NN векторов
   - Улучшена обработка ошибок подключения

2. LLM Provider Improvements:
   - Добавлена обработка JSON парсинга для всех провайдеров
   - Поддержка как JSON, так и строкового формата API ключей
   - Провайдеры: Azure, VolcEngine, Bedrock, HunyuanChat, BaiduYiyanChat, GoogleChat, OpenRouter

3. Multi-tenancy Fixes:
   - Исправлен JOIN с таблицей Tenant в dialog_service.py
   - Исправлена проверка владельца в conversation_app.py
   - Рефакторинг дублирующейся логики в dialog_app.py

4. Mapping Improvements:
   - Устранены дубликаты ключей в mapping.json
   - Уникальные имена для всех k-NN векторных шаблонов

Все изменения протестированы и совместимы с RAGFlow 0.21.1.

--- a/conf/mapping.json
+++ b/conf/mapping.json
@@ -156,46 +156,47 @@
         }
       },
       {
-        "dense_vector": {
+        "knn_vector_512": {
           "match": "*_512_vec",
           "mapping": {
-            "type": "dense_vector",
-            "index": true,
-            "similarity": "cosine",
-            "dims": 512
+            "type": "knn_vector",
+            "dimension": 512
           }
         }
       },
       {
-        "dense_vector": {
+        "knn_vector_768": {
           "match": "*_768_vec",
           "mapping": {
-            "type": "dense_vector",
-            "index": true,
-            "similarity": "cosine",
-            "dims": 768
+            "type": "knn_vector",
+            "dimension": 768
           }
         }
       },
       {
-        "dense_vector": {
+        "knn_vector_1024": {
           "match": "*_1024_vec",
           "mapping": {
-            "type": "dense_vector",
-            "index": true,
-            "similarity": "cosine",
-            "dims": 1024
+            "type": "knn_vector",
+            "dimension": 1024
           }
         }
       },
       {
-        "dense_vector": {
+        "knn_vector_1536": {
           "match": "*_1536_vec",
           "mapping": {
-            "type": "dense_vector",
-            "index": true,
-            "similarity": "cosine",
-            "dims": 1536
+            "type": "knn_vector",
+            "dimension": 1536
+          }
+        }
+      },
+      {
+        "knn_vector": {
+          "match": "*_3072_vec",
+          "mapping": {
+            "type": "knn_vector",
+            "dimension": 3072
           }
         }
       },
